# esp-idf

./: .gitmodules
components/aws-iot-device-sdk-embedded-C/: CMakeLists.txt  iot_config.h
components/aws-iot-device-sdk-embedded-C/port/include/: iot_config.h  iot_platform_types_freertos.h  threading_alt.h
components/aws-iot-device-sdk-embedded-C/port/src/: iot_clock_freertos.c  iot_logging.c  iot_network_mbedtls.c  iot_threads_freertos.c
components/driver/: i2c.c
components/mbedtls/: CMakeLists.txt
components/mbedtls/port/: net_sockets.c
components/partition_table/: gen_esp32part.py
components/spi_flash/: partition.c
components/spi_flash/include/: esp_partition.h
